Add add label job

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -58,9 +58,9 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            const { github, context } = require('@actions/github');
-            const { owner, repo } = context.repo;
-            const pull_number = context.payload.pull_request.number;
+            const github = require('@actions/github');
+            const { owner, repo } = github.context.repo;
+            const pull_number = github.context.payload.pull_request.number;
             const label = 'request_code_review';
             await github.issues.addLabels({
               owner,
