--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -46,7 +46,7 @@ jobs:
           SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   add_label:
-    # needs: auto_code_review
+    needs: auto_code_review
     runs-on: ubuntu-latest
     permissions:
       contents: write
