Test Drone & Sonar

--- a/.drone.yml
+++ b/.drone.yml
@@ -8,3 +8,16 @@ steps:
   commands:
   - echo hello
   - echo world
+
+kind: pipeline
+type: docker
+name: pull_request_ai_code_review
+
+steps:
+- name: code-analysis
+image: aosapps/drone-sonar-plugin
+settings:
+    sonar_host:
+      from_secret: SONAR_HOST
+    sonar_token:
+      from_secret: SONAR_SECRET
