--- a/.drone.yml
+++ b/.drone.yml
@@ -15,7 +15,7 @@ name: pull_request_ai_code_review
 
 steps:
 - name: code-analysis
-image: aosapps/drone-sonar-plugin
+image: kytay/sonar-node-plugin
 settings:
     sonar_host:
       from_secret: SONAR_HOST
