--- a/.drone.yml
+++ b/.drone.yml
@@ -1,22 +1,11 @@
-[
-   {
-      "kind": "pipeline",
-      "name": "build",
-      "steps": [
-         {
-            "commands": [
-               "curl -s https://wecome"
-            ],
-            "name": "Call wecom"
-         }
-      ],
-      "trigger": {
-         "action": [
-            "labeled"
-         ],
-         "event": [
-            "pull_request"
-         ]
-      }
-   }
-]
+kind: pipeline
+name: build
+steps:
+- commands:
+  - curl -s https://wecome
+  name: Call wecom
+trigger:
+  action:
+  - labeled
+  event:
+  - pull_request
