--- a/.drone.yml
+++ b/.drone.yml
@@ -1,11 +1,14 @@
+---
 kind: pipeline
 name: build
 steps:
 - commands:
-  - curl -s https://wecome
-  name: Call wecom
+  - echo start build on PR labeled
+  image: alpine
+  name: Build
 trigger:
   action:
   - labeled
   event:
   - pull_request
+type: docker
