--- a/.drone.yml
+++ b/.drone.yml
@@ -1,5 +1,14 @@
 ---
 kind: pipeline
+name: start_drone
+steps:
+- commands:
+  - echo start run drone
+  image: alpine
+  name: Build
+type: docker
+---
+kind: pipeline
 name: build
 steps:
 - commands:
