--- a/.drone.yml
+++ b/.drone.yml
@@ -30,7 +30,8 @@ name: Request code review
 steps:
 - commands:
   - echo "start send notification"
-  - echo "This is triggered by a custom event ${DRONE_CUSTOM_PARAM} ${DRONE_CUSTOM_ENV}"
+  - echo "This is triggered by a custom event ${custom_param} ${DRONE_CUSTOM_PARAM}
+    ${DRONE_CUSTOM_ENV}"
   image: alpine
   name: Send notification
 trigger:
