--- a/.drone.yml
+++ b/.drone.yml
@@ -30,8 +30,9 @@ name: Request code review
 steps:
 - commands:
   - echo "start send notification"
-  - echo "This is triggered by a custom event ${custom_param} ${DRONE_CUSTOM_PARAM}
-    ${DRONE_CUSTOM_ENV}"
+  - env | grep -v DRONE | grep -v CI | sort
+  - 'echo "This is triggered by a custom event cp:${custom_param} dcp: ${DRONE_CUSTOM_PARAM}
+    dce: ${DRONE_CUSTOM_ENV}"'
   image: alpine
   name: Send notification
 trigger:
