--- a/.drone.yml
+++ b/.drone.yml
@@ -30,7 +30,7 @@ name: Request code review
 steps:
 - commands:
   - echo "start send notification"
-  - env | grep -v DRONE | grep -v CI | sort
+  - env
   - 'echo "This is triggered by a custom event cp:${custom_param} dcp: ${DRONE_CUSTOM_PARAM}
     dce: ${DRONE_CUSTOM_ENV}"'
   image: alpine
